--- a/src/main.css
+++ b/src/main.css
@@ -10,10 +10,50 @@
     box-sizing: border-box;
 }
 
+html {
+    min-height: 100%;
+}
+
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(---primary-color);
     color: #fff;
     font-size: 1.125rem;
     line-height: 1.6;
+    height: 100%;
+    width: 100%;
+}
+
+.container {
+    display: grid;
+    height: 100vh;
+    width: 100%;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+}
+
+.calculator {
+    grid-column: 3 / span 5;
+    grid-row: 3 / span 6;
+}
+.calculator-display {
+    display: flex;
+    height: 25%;
+}
+.calculator-digits-container {
+    display: grid;
+    grid-column: 5 / span 5;
+    grid-row: 5 / span 5;
+    height: 75%;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr)
+}
+
+li {
+    list-style-type: none;
+}
+
+
+.calculator-digits:first-child {
 }
