--- a/src/main.css
+++ b/src/main.css
@@ -49,3 +49,15 @@ body {
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr)
 }
+
+.button-container:nth-child(20) {
+    grid-column: 5 / 6;
+    grid-row: 4 / 6;
+}
+
+
+.button-container > button {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
