--- a/src/main.css
+++ b/src/main.css
@@ -18,7 +18,7 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(---primary-color);
-    color: #fff;
+    color: black;
     font-size: 1.125rem;
     line-height: 1.6;
     height: 100%;
@@ -29,17 +29,13 @@ body {
     display: grid;
     height: 100vh;
     width: 100%;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(9, 1fr);
     grid-template-rows: repeat(10, 1fr);
 }
 
 .calculator {
     grid-column: 3 / span 5;
     grid-row: 3 / span 6;
-}
-.calculator-display {
-    display: flex;
-    height: 25%;
 }
 .calculator-digits-container {
     display: grid;
@@ -60,4 +56,31 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
+    font-size: 4.125rem;
+}
+.calculator-display {
+    display: flex;
+    flex-direction: column;
+    height: 25%;
+}
+
+.calculator-display-current, .calculator-display-history {
+    flex: 1;
+}
+
+.calculator-display-current > input {
+    width: 100%;
+    height: 100%;
+    font-size: 2.125rem;
+}
+.calculator-display-current {
+    min-height: 25%;
+}
+
+.calculator-display-history {
+    min-height: 75%;
+    background-color: #c7c7c7;
+    padding: 2%;
+    overflow-y: scroll;
+    font-weight: 100;
 }
